editors/tree-sitter-musa/grammar.js
    source_file: ($) => choice($.piece_declaration, $.library_declaration),

    // --- Piece level (Parser::piece_decl) -------------------------------

    piece_declaration: ($) =>
      seq(
        'piece',
        field('name', $.string),
        '{',
        repeat(
          choice(
            $.import_statement,
            $.tempo_statement,
            $.meter_statement,
            $.key_statement,
            $.front_matter_statement,
            $.motif_declaration,
            $.fragment_declaration,
            $.score_declaration,
            $.performance_declaration,
            $.studio_declaration,
          ),
        ),
        '}',
      ),

    // Parser::library_decl — what can be shared: no score, no header.
    import_statement: ($) => seq('use', field('path', $.string), ';'),

    // Parser::front_matter_stmt — one shape, four heads.
    front_matter_statement: ($) =>
      seq(choice('subtitle', 'composer', 'arranger', 'copyright'), field('value', $.string), ';'),

    // Parser::tempo_stmt — a metronome mark, a tempo word, or both; a
    // gradual change adds where it arrives and how far it takes to get
    // there (prompt 73).
    tempo_statement: ($) =>
      seq(
        'tempo',
        choice(
          // The word may lead (`tempo "Andante";`) — and a gradual change
          // may still reach from it.
          seq(field('word', $.string), optional($.tempo_span)),
          seq(
            optional(field('beat', choice($.identifier, $.rational))),
            '=',
            field('bpm', $.integer),
            // `to 60` — where a gradual change arrives, in the same beat
            // unit. `to` rather than a keyword of its own, for the reason
            // `crescendo to f` reads: arriving somewhere is one idea.
            optional(seq('to', field('arrives', $.integer))),
            optional($.tempo_span),
            // The word may trail, for a marking that says both.
            optional(field('word', $.string)),
          ),
        ),
        ';',
      ),

    // `over 4/1` — how far a gradual change reaches.
    meter_statement: ($) => seq('meter', field('meter', $.rational), ';'),

    // Parser::key_stmt — `key a minor;`
    key_statement: ($) => seq('key', field('pitch_class', $.identifier), field('mode', $.identifier), ';'),

    // Parser::motif_decl — parameters inline, as in the hand parser: a
    // comma-joined run of `name: type (= default)?`, trailing comma allowed.
    motif_declaration: ($) =>
      seq(
        'motif',
        field('name', $.identifier),
        '(',
        optional(
          seq(
            $.motif_parameter,
            repeat(seq(',', $.motif_parameter)),
            optional(','),
          ),
        ),
        ')',
        field('body', $.block),
      ),

    // One `name: type (= default)?` of Parser::motif_decl's loop.
    motif_parameter: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', choice('pitch', $.identifier)),
        optional(seq('=', field('default', choice($.pitch_literal, $.rational, $.integer)))),
      ),

    // Parser::fragment_decl — a motif without parameters, tagged differently.
    fragment_declaration: ($) => seq('fragment', field('name', $.identifier), field('body', $.block)),

    // --- Score level (Parser::score_decl and below) ---------------------

    score_declaration: ($) =>
      seq(
        'score',
        '{',
        repeat(choice($.part_declaration, $.section_statement, $.harmony_declaration)),
        '}',
      ),

    part_declaration: ($) =>
      seq(
        'part',
        field('name', $.identifier),
        '{',
        repeat(choice($.clef_statement, $.profile_statement, $.voice_declaration)),
        '}',
      ),

    // Parser::clef_stmt.
    clef_statement: ($) => seq('clef', field('name', $.identifier), ';'),

    // Parser::profile_stmt — which profile realizes this part.
    profile_statement: ($) => seq('profile', field('name', $.identifier), ';'),

    // Parser::voice_decl — the braces are the declaration's own, no Block.
    voice_declaration: ($) =>
      seq('voice', field('name', $.identifier), '{', repeat(choice(...VOICE_ITEMS($))), '}'),

    // --- Performance level (Parser::performance_decl) -------------------

    performance_declaration: ($) => seq('performance', '{', repeat($.profile_declaration), '}'),

    profile_declaration: ($) =>
      seq(
        'profile',
        field('name', $.identifier),
        '{',
        repeat(choice($.mark_rule, $.dynamic_rule, $.groove_rule, $.grace_rule)),
        '}',
      ),

    // Parser::rule — `mark|dynamic|groove <name> { <setting>* }`.
    mark_rule: ($) => seq('mark', field('name', $.identifier), field('body', $.settings_block)),
    dynamic_rule: ($) => seq('dynamic', field('name', $.identifier), field('body', $.settings_block)),
    settings_block: ($) => seq('{', repeat($.setting_statement), '}'),

    // Parser::setting_stmt — `<name> = [-]<number or word> [ms|s];`
    setting_statement: ($) =>
      seq(
        field('name', $.identifier),
        '=',
        optional('-'),
        field('value', choice($.float, $.integer, $.rational, $.identifier)),
        optional(field('unit', $.unit)),
        ';',
      ),

    // --- Studio level (Parser::studio_decl and below, roadmap §7.1) -----

    studio_declaration: ($) =>
      seq(
        'studio',
        '{',
        repeat(
          choice(
            $.patch_declaration,
            $.bus_declaration,
            $.modulate_statement,
            $.assign_statement,
            $.route_statement,
            $.send_statement,
            $.signal_binding,
          ),
        ),
        '}',
      ),

    patch_declaration: ($) =>
      seq('patch', field('name', $.identifier), '{', repeat(choice($.signal_binding, $.chain_statement)), '}'),

    bus_declaration: ($) =>
      seq('bus', field('name', $.identifier), '{', repeat(choice($.signal_binding, $.chain_statement)), '}'),

    // Parser::signal_binding — `<name> = <chain>;`
    signal_binding: ($) => seq(field('name', $.identifier), '=', $.signal_chain, ';'),

    // Parser::chain_stmt — unnamed, so its value is the enclosing block's.
    chain_statement: ($) => seq($.signal_chain, ';'),

    // Parser::signal_chain — `|>` is left-associative and the only operator.
    signal_chain: ($) => seq($.stage, repeat(seq('|>', $.stage))),

    // Parser::stage — a construction, a bare name, or the `output` terminal.
    stage: ($) => choice($.call_expression, $.name_reference),

    // Parser::call_expr.
    call_expression: ($) => seq(field('name', $.identifier), $.argument_list),

    argument_list: ($) => seq('(', optional(seq($.argument, repeat(seq(',', $.argument)))), ')'),

    // Parser::arg — `<name>: <value>` or a positional `<value>`.
    argument: ($) => seq(optional(seq(field('name', $.identifier), ':')), choice($.value_literal, $.call_expression, $.name_reference)),

    // Parser::value's number form — `[-]<number> [unit]`.
    value_literal: ($) =>
      seq(optional('-'), choice($.float, $.integer, $.rational), optional(field('unit', $.unit))),

    // Parser's NameRef: another signal, or the `output` / `master` terminal.
    name_reference: ($) => choice('output', 'master', $.identifier),

    // Parser::modulate_stmt — `modulate <signal> -> <patch>.<stage>.<param>;`
    modulate_statement: ($) =>
      seq('modulate', field('signal', $.identifier), '->', $.parameter_path, ';'),

    parameter_path: ($) => seq(field('patch', $.identifier), repeat(seq('.', $.identifier))),

    // Parser::binding_stmt — one shape, two heads.
    assign_statement: ($) =>
      seq('assign', field('source', $.identifier), '->', field('destination', $.identifier), ';'),
    route_statement: ($) =>
      seq('route', field('source', $.identifier), '->', field('destination', choice('master', $.identifier)), ';'),

    // Parser::send_stmt — `send <source> -> <bus> at <gain>;`
    send_statement: ($) =>
      seq(
        'send',
        field('source', $.identifier),
        '->',
        field('bus', $.identifier),
        'at',
        field('gain', choice($.value_literal, $.call_expression, $.name_reference)),
        ';',
      ),

    // --- Voice items (Parser::voice_items and its callees) ---------------

    // Parser::block — the `{ ... }` body of a motif, transpose, or repeat.
    block: ($) => seq('{', repeat(choice(...VOICE_ITEMS($))), '}'),

    // Parser::note_stmt — `<pitch-or-ref> <duration> <articulation>* ~? ;`
    note_statement: ($) =>
      seq(
        field('pitch', choice($.pitch_literal, $.identifier)),
        $.duration,
        optional($.articulation_list),
        optional('~'),
        ';',
      ),

    // Parser::articulations — their own node, by the hand parser's own rule:
    // a bare identifier here is an articulation, not a reference.
    articulation_list: ($) => repeat1($.identifier),

    // Parser::duration — `1/4`, `1`, or a parameter reference; `to` bounds
    // how long the written value may be held (roadmap §2).
    duration: ($) =>
      seq(
        choice($.rational, $.integer, $.identifier),
        optional(seq('to', choice($.rational, $.integer, $.identifier))),
      ),

    rest_statement: ($) => seq('rest', $.duration, ';'),

    // Parser::chord_stmt — `chord [<pitch>, ...] <duration>;`
    chord_statement: ($) =>
      seq(
        'chord',
        '[',
        $.pitch_literal,
        repeat(seq(',', $.pitch_literal)),
        ']',
        $.duration,
        optional($.articulation_list),
        optional('~'),
        ';',
      ),

    // Parser::use_stmt — the parentheses *are* the argument list; `with` is a
    // block, so it takes no `;`.
    use_statement: ($) =>
      seq(
        'use',
        field('name', $.identifier),
        optional(
          seq(
            '(',
            optional(
              seq(
                choice($.pitch_literal, $.identifier, $.rational, $.integer),
                repeat(seq(',', choice($.pitch_literal, $.identifier, $.rational, $.integer))),
              ),
            ),
            ')',
          ),
        ),
        choice(field('overrides', $.with_clause), ';'),
      ),

    // Parser::with_clause — `with { note <n> = <pitch>; ... }`
    transpose_statement: ($) =>
      seq('transpose', field('direction', choice('up', 'down')), field('interval', $.interval_literal), field('body', $.block)),

    // Parser::repeat_stmt — a count, or a range the realization chooses in.
    repeat_statement: ($) =>
      seq('repeat', field('count', $.integer), optional(seq('to', field('maximum', $.integer))), field('body', $.block)),

    // Parser::ending_stmt — `ending 1 { ... }`
    bar_statement: ($) => seq('bar', optional(field('name', $.identifier)), field('body', $.block)),

    mark_statement: ($) =>
      seq(
        'mark',
        field('name', $.identifier),
        optional(field('argument', choice($.string, $.integer, seq('-', $.integer)))),
        choice(field('body', $.block), ';'),
      ),

    // Parser::grace_stmt — pitches and nothing else: no written duration.
    dynamic_statement: ($) => seq('dynamic', field('mark', $.identifier), ';'),

    // Parser::stretch_stmt — `stretch <n>/<d> { ... }`
    pitch_literal: ($) => /[a-g](ss|ff|[sfn])?-?[0-9]+/,

    // `[PMm][0-9]+` — an interval: quality and size.
    interval_literal: ($) => /[PMm][0-9]+/,

    rational: ($) => /[0-9]+\/[0-9]+/,
    float: ($) => /[0-9]+\.[0-9]+/,
    integer: ($) => /[0-9]+/,
    identifier: ($) => /[a-zA-Z_]+/,

    // `"([^"\\\n]|\\[^\n])*"` — one quoted line. An unterminated quote is
    // error recovery's business, exactly as the hand lexer leaves it.
    string: ($) => /"([^"\\\n]|\\[^\n])*"/,

    // The units the parser's rules consume: `Hz`, `ms`, `s`, `dB`. (`bpm`
    // lexes but no rule reads it yet; it joins when one does.)
    unit: ($) => token(choice('Hz', 'ms', 's', 'dB')),

    comment: ($) =>
      choice(
        // `//[^\n]*`
        /\/\/[^\n]*/,
        // `(?s)/\*([^*]|\*[^/])*\*/`
        // `(?s)/\*([^*]|\*[^/])*\*/` — the flag needs no spelling here: the
        // classes are negations, which match newlines in both regex flavors.
        /\/\*([^*]|\*[^/])*\*\//,
      ),
  },
});
