editors/tree-sitter-musa/test/corpus/counterpoint.txt
================================================================================
counterpoint
================================================================================

piece "Counterpoint Study" {
    tempo quarter = 90;
    meter 4/4;
    key d minor;

    score {
        part violin {
            clef treble;

            voice lead {
                | d4/2 f4/2
                | e4/2 [d4 f#4 a4]/2 fermata
            }
        }

        part viola {
            clef alto;

            voice line {
                | d3/2 a2/2
                | bb2/2 a2/2 fermata
            }
        }
    }
}

---

(source_file
  (piece_declaration
    (string)
    (tempo_statement
      (identifier)
      (integer))
    (meter_statement
      (rational))
    (key_statement
      (pitch_class
        (identifier))
      (identifier))
    (score_declaration
      (part_declaration
        (identifier)
        (clef_statement
          (identifier))
        (voice_declaration
          (identifier)
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer))))
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (chord_statement
              (pitch_literal)
              (pitch_literal)
              (pitch_literal)
              (duration
                (integer))
              (articulation_list
                (identifier))))))
      (part_declaration
        (identifier)
        (clef_statement
          (identifier))
        (voice_declaration
          (identifier)
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer))))
          (bar_statement
            (note_statement
              (pitch_literal)
              (duration
                (integer)))
            (note_statement
              (pitch_literal)
              (duration
                (integer))
              (articulation_list
                (identifier)))))))))
