editors/tree-sitter-musa/test/corpus/glass-mountain.txt
================================================================================
glass-mountain
================================================================================

piece "Glass Mountain" {
    subtitle "for violin and strings";
    composer "musa";
    copyright "© 2026. Licensed CC BY-SA 4.0.";

    tempo quarter = 72;
    meter 4/4;
    key a minor;

    motif sigh(root: pitch = e5) {
        root 1/2;
        rest 1/4;
        c5 1/2;
        b4 1/4;
        a4 1/2;
    }

    score {
        part violin {
            clef treble;

            voice lead {
                use sigh();

                transpose down P5 {
                    use sigh();
                }
            }
        }

        part strings {
            voice upper {
                c5 1;
                c5 1;
                a4 1;
                g#4 1;
            }

            voice bass {
                // Under the pedal for the whole descent: the harmony is a
                // wash rather than four separate chords, and the pedal is
                // where a page says so.
                mark pedal {
                    a2 1;
                    f2 1;
                    d2 1;
                    e2 1;
                }
            }
        }
    }

    // The sound side (roadmap 7.1). Every stage here runs real DSP: the
    // oscillators and envelope are the voice, the filter and its modulation
    // shape it, and the hall is a send to a reverb bus that returns to the
    // master.
    studio {
        patch glass_pad {
            carrier = oscillator(sine);
            shimmer = oscillator(sine, ratio: 2) |> gain(-15 dB);

            mix(carrier, shimmer)
                |> envelope(adsr(attack: 30 ms, decay: 1.8 s, sustain: 0.65, release: 3.5 s))
                |> lowpass(cutoff: 1400 Hz, q: 0.7)
                |> output;
        }

        lfo = oscillator(sine, frequency: 0.08 Hz)
            |> scale(250 Hz)
            |> bias(1400 Hz);

        modulate lfo -> glass_pad.lowpass.cutoff;

        bus hall {
            reverb(room: 0.82, damping: 0.55);
        }

        assign violin -> glass_pad;
        assign strings -> glass_pad;

        route violin -> master;
        route strings -> master;

        send violin -> hall at -18 dB;
        send strings -> hall at -14 dB;
        route hall -> master;
    }
}

---

(source_file
  (piece_declaration
    (string)
    (front_matter_statement
      (string))
    (front_matter_statement
      (string))
    (front_matter_statement
      (string))
    (tempo_statement
      (identifier)
      (integer))
    (meter_statement
      (rational))
    (key_statement
      (pitch_class
        (identifier))
      (identifier))
    (motif_declaration
      (identifier)
      (motif_parameter
        (identifier)
        (pitch_literal))
      (block
        (note_statement
          (identifier)
          (duration
            (rational)))
        (rest_statement
          (duration
            (rational)))
        (note_statement
          (pitch_literal)
          (duration
            (rational)))
        (note_statement
          (pitch_literal)
          (duration
            (rational)))
        (note_statement
          (pitch_literal)
          (duration
            (rational)))))
    (score_declaration
      (part_declaration
        (identifier)
        (clef_statement
          (identifier))
        (voice_declaration
          (identifier)
          (use_statement
            (identifier))
          (transpose_statement
            (interval_literal)
            (block
              (use_statement
                (identifier))))))
      (part_declaration
        (identifier)
        (voice_declaration
          (identifier)
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer)))
          (note_statement
            (pitch_literal)
            (duration
              (integer))))
        (voice_declaration
          (identifier)
          (comment)
          (comment)
          (comment)
          (mark_statement
            (identifier)
            (block
              (note_statement
                (pitch_literal)
                (duration
                  (integer)))
              (note_statement
                (pitch_literal)
                (duration
                  (integer)))
              (note_statement
                (pitch_literal)
                (duration
                  (integer)))
              (note_statement
                (pitch_literal)
                (duration
                  (integer))))))))
    (comment)
    (comment)
    (comment)
    (comment)
    (studio_declaration
      (patch_declaration
        (identifier)
        (signal_binding
          (identifier)
          (signal_chain
            (stage
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (name_reference
                      (identifier))))))))
        (signal_binding
          (identifier)
          (signal_chain
            (stage
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (name_reference
                      (identifier)))
                  (argument
                    (identifier)
                    (value_literal
                      (integer))))))
            (stage
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (value_literal
                      (integer)
                      (unit))))))))
        (chain_statement
          (signal_chain
            (stage
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (name_reference
                      (identifier)))
                  (argument
                    (name_reference
                      (identifier))))))
            (stage
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (call_expression
                      (identifier)
                      (argument_list
                        (argument
                          (identifier)
                          (value_literal
                            (integer)
                            (unit)))
                        (argument
                          (identifier)
                          (value_literal
                            (float)
                            (unit)))
                        (argument
                          (identifier)
                          (value_literal
                            (float)))
                        (argument
                          (identifier)
                          (value_literal
                            (float)
                            (unit)))))))))
            (stage
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (identifier)
                    (value_literal
                      (integer)
                      (unit)))
                  (argument
                    (identifier)
                    (value_literal
                      (float))))))
            (stage
              (name_reference)))))
      (signal_binding
        (identifier)
        (signal_chain
          (stage
            (call_expression
              (identifier)
              (argument_list
                (argument
                  (name_reference
                    (identifier)))
                (argument
                  (identifier)
                  (value_literal
                    (float)
                    (unit))))))
          (stage
            (call_expression
              (identifier)
              (argument_list
                (argument
                  (value_literal
                    (integer)
                    (unit))))))
          (stage
            (call_expression
              (identifier)
              (argument_list
                (argument
                  (value_literal
                    (integer)
                    (unit))))))))
      (modulate_statement
        (identifier)
        (parameter_path
          (identifier)
          (identifier)
          (identifier)))
      (bus_declaration
        (identifier)
        (chain_statement
          (signal_chain
            (stage
              (call_expression
                (identifier)
                (argument_list
                  (argument
                    (identifier)
                    (value_literal
                      (float)))
                  (argument
                    (identifier)
                    (value_literal
                      (float)))))))))
      (assign_statement
        (identifier)
        (identifier))
      (assign_statement
        (identifier)
        (identifier))
      (route_statement
        (identifier))
      (route_statement
        (identifier))
      (send_statement
        (identifier)
        (identifier)
        (value_literal
          (integer)
          (unit)))
      (send_statement
        (identifier)
        (identifier)
        (value_literal
          (integer)
          (unit)))
      (route_statement
        (identifier)))))
